--- a/magicMirror.css
+++ b/magicMirror.css
@@ -18,8 +18,7 @@
 		transform: translate(-50%);
 	}
 	.main{
-		width: 85%;
-		margin: 0;
+		width: 90%;
 		color: white;
 		position: absolute;
 		top: 50%;
@@ -27,7 +26,7 @@
 		transform: translate(-50%,-50%);
 	}
 	.main p{
-		width: 85%;
+		width: 70%;
 		text-align: left;
 		margin: 0 auto;
 	}
@@ -57,7 +56,8 @@
 		color: white;
 	}
 	.icon{
-		margin-top: 20px;
-		margin-left: 20px;
+		position: absolute;
+		top: 20px;
+		left: 20px;
 		width: 35px;
 	}
